crates/parser/tests/snapshots/block_string_0_literal_clip_wsln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-0-literal-clip-wsln-dedent

## Input

```
key |
 
other val

```

## CST

```
SOURCE_FILE@0..18
  ENTRY@0..7
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..6
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
    SPACE@6..7 " "
  NEWLINE@7..8 "\n"
  ENTRY@8..17
    WORD_KEY@8..13
      WORD@8..13 "other"
    SPACE@13..14 " "
    LINE_STRING@14..17
      STRING@14..17 "val"
  NEWLINE@17..18 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@8..13 "other",
            },
            value: LineString {
                string: STRING@14..17 "val",
            },
        },
    ],
}
```

vim:ft=markdown
