crates/parser/tests/snapshots/block_string_0_literal_clip_wsln_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-0-literal-clip-wsln-eof

## Input

```
key |
 

```

## CST

```
SOURCE_FILE@0..8
  ENTRY@0..8
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..6
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
    SPACE@6..7 " "
    NEWLINE@7..8 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [],
            },
        },
    ],
}
```

vim:ft=markdown
